# color-me-noisy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cult.cpp  cult.h  image_pyramid.cpp  image_pyramid.h  image_utils.cpp  image_utils.h  mainwindow.cpp  mainwindow.h  patchmatch.cpp  patchmatch.h  settings.cpp  settings.h
source_videos/: 67.mov  bunny.mov  cicero_1.mov  cicero_2.mov  fish.mov  fish_guy.mov  fish_guy_square.mov  side_full.mov  walker.mov  walker_long.mov
